// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > renders horizontal 1`] = `
<div>
  <div
    class="bg-hairline shrink-0 h-px w-full"
    data-orientation="horizontal"
    role="separator"
  />
</div>
`;

exports[`Separator > renders vertical 1`] = `
<div>
  <div
    aria-orientation="vertical"
    class="bg-hairline shrink-0 h-full w-px"
    data-orientation="vertical"
    role="separator"
  />
</div>
`;
